fix nav spacing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -129,8 +129,8 @@ img {
   justify-content: space-between;
   align-items: center;
   font-weight: var(--font-semi);
-  margin-left: 3em;
-  margin-right: 3em;
+  margin-left: 1em;
+  margin-right: 1em;
 }
 @media screen and (max-width: 767px) {
   .nav__menu {
